<resources>
    <string name="app_name">Solved Question Papers</string>
    <string name="an_aman_tyagi_app">an aman tyagi app © 2017-18</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="about">About</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="english">English</string>
    <string name="maths">Mathematics</string>
    <string name="biology">Biology</string>
    <string name="computer_science">Computer Science</string>
    <string name="physical_education">Physical Education</string>
    <string name="accountancy">Accountancy</string>
    <string name="hindi">Hindi</string>
    <string name="economics">Economics</string>
    <string name="business_studies">Business Studies</string>
    <string name="political_science">Political Science</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="description">"This app here is trying to give a sigh of relief to all board examination\'s students by providing some previous year's question papers with their solutions to help them provide a quick revision of their entire syllabus. \n \n CBSE repeats the same type of questions in the exams over the years.\n \nIt's a small effort by
        the developer to ease the board examination's pressure for students like you. \n \n BEST OF LUCK FOR YOUR BOARD EXAMS!\n \n \nAnd lastly I'd like to sincerely thanks \nMr. Anurag Bishwas\nMr. Nitin Agrawal\nMr. Praveen Bansal\n for guiding and helping me throughout this project.   \n \n \n-Aman Tyagi\nanuntah"</string>
    <string name="about_app">About App</string>
    <string name="about_app_body">A number of resource files used in the app are collected from internet and various other sources and have been redeveloped by the developer for a much better user experience. The content used in the app does not belong to any one specific source. The entire content has been collected and/or built and/or redeveloped by the developer of the app to use as per the requirement of the app.\n \n All the Schools, Teachers and Students are allowed to use the contents of this app to study or to teach as is. \n \nKindly note, any part or resource of this app shall not be reproduced in any manner, whatsoever, without the written permission from the developer.\nThe developer is not responsible for any errors /omissions, if any, occurred in this app under any circumstances. Though every possible measures have been taken to make this app up to the mark.\n \nThank You for downloading! </string>

</resources>
